# Xiaomi-MiMo-TTS-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
src/mimo_tts_mcp/: __init__.py  __main__.py  server.py
