[project]
name = "xiaomi-mimo-tts-mcp"
version = "0.1.0"
description = "MCP server that bridges Xiaomi MiMo TTS API into MCP-compatible clients (Cherry Studio, Claude Desktop, etc)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "NanAquarius" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
]

[project.scripts]
xiaomi-mimo-tts-mcp = "mimo_tts_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimo_tts_mcp"]
